src/page/style/root.module.css
/* ... */
.header {
    --root-default-fontsize: 0.9rem;
    margin-left: auto;
    margin-right: auto;
    width: 1280px;
    height: 100%;
    padding-left: 2rem;
    padding-right: 2rem;
    font-size: var(--root-default-fontsize);
    color: var(--root-header-textColor);
}

.navbar {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.navbar .nav {
    --logo-size: 30px;
    display: flex;
    align-items: center;
    gap: 1rem;
    padding: 0.5rem 1.25rem;
    border-radius: 0.5rem;
    border: 1px solid var(--root-header-borderColor);
    background-color: var(--root-navbar-bgColor);
    backdrop-filter: blur(5px) saturate(50%);
    overflow: hidden;
}

.navbar .nav>a {
    display: block;
    padding: 0.5rem;
    border-radius: inherit;
    cursor: pointer;
}

.navbar .nav a.link {
    color: var(--root-navbar-lightTextColor);
}

.navbar .nav a.link svg.external {
    font-size: calc(0.85 * 1em);
}

.navbar .nav>.logo {
    cursor: pointer;
    width: var(--logo-size);
    height: var(--logo-size);
}

.navbar .nav>a.cta {
    position: relative;
    appearance: none;
    z-index: 0;
    display: flex;
    align-items: center;
    gap: 0.5rem;
    overflow: hidden;
    white-space: nowrap;
    padding: 0.375rem 0.75rem;
    border-radius: inherit;
    border: 1px solid var(--root-header-borderColor);
    background-color: transparent;
    color: var(--root-header-textColor);
    font-weight: 500;
    cursor: pointer;
}

.navbar .nav>a.cta::before {
    content: '';
    position: absolute;
    inset: 0;
    z-index: -10;
    transform: translateY(200%) scale(2.5);
    border-radius: 50%;
    background-color: var(--logo-second-color);
    transition: transform 750ms ease-in-out;
}

.navbar .nav>.theme svg {
    width: calc(var(--logo-size) / 2);
    height: calc(var(--logo-size) / 2);
}

.navbar .nav>.theme {
    overflow: hidden;
    width: var(--logo-size);
    height: var(--logo-size);
    color: var(--logo-second-color);
    cursor: pointer;
}

.navbar .nav>.theme .inner {
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: var(--logo-size);
    width: var(--logo-size);
}

/* #endregion */

/* #region Hero */

.hero {
    --inner-padding: 2rem;
    padding: var(--inner-padding);
    height: 100vh;
    overflow: hidden;
}

/* #endregion */

/* #region Section 'Universitas' */

.universitas {
    --inner-padding: 2rem;
    --icon-size: 70px;
    --scrolling-icon-size: 30px;
    margin-left: calc(-50vw + 50%);
    margin-right: calc(-50vw + 50%);
    display: flex;
    flex-direction: column;
    height: var(--root-section-height);
    border: none;
}

.universitas>.inner {
    width: var(--container-width);
    margin: 0 auto;
    flex: 1;
    display: flex;
}

.universitas .layout {
    display: flex;
    flex-direction: row;
    gap: 1rem;
}

.universitas .text {
    display: flex;
    flex: 1;
    justify-content: center;
    flex-direction: column;
    padding: var(--inner-padding);
    perspective: 500px;
}

.universitas .title {
    margin-bottom: 0.25rem;
}

.universitas .title_description {
    margin-bottom: 2rem;
    text-align: justify;
}

.universitas .title_cta {
    display: flex;
    gap: 1rem;
    color: var(--dark-color);
}

.universitas .btn {
    display: flex;
    align-items: center;
    gap: 0.4rem;
    cursor: pointer;
    padding: 0.6rem 0.85rem;
    border-radius: 0.5rem;
    background-color: var(--users-btn-alt);
    color: var(--white-color);
}

.universitas .btn.secondary {
    border: 1px solid var(--accordion-bg2-color);
    background-color: var(--white-color);
    color: var(--dark-color);
}

.universitas .btn svg.external {
    font-size: calc(0.9 * 1em);
}

.universitas .content {
    display: flex;
    flex: 1;
    justify-content: center;
    align-items: center;
    gap: 1rem;
    padding: var(--inner-padding);
    perspective: 500px;
}

.universitas .content .icons {
    transform-style: preserve-3d;
}

.universitas .content .icons .icon {
    width: var(--icon-size);
    height: var(--icon-size);
    padding: 1rem;
    margin-bottom: 1rem;
    background: var(--white-color);
    box-shadow: 0 0.5rem 0.75rem var(--light-color);
    border-radius: 1rem;
    transition: box-shadow var(--transition-default) ease-in-out;
}

.universitas .scrolling {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 1rem 0;
}

.universitas .scrolling .items {
    position: relative;
    height: 60px;
    border-top: 2.75px solid var(--root-section-lineColor);
    border-bottom: 2.75px solid var(--root-section-lineColor);
}

.universitas .scrolling .items:first-child {
    border-bottom: none;
}

.universitas .scrolling .item {
    display: flex;
    align-items: center;
    gap: 1rem;
}

.universitas .scrolling .item .logo {
    width: var(--scrolling-icon-size);
    height: var(--scrolling-icon-size);
}

.universitas .scrolling .item .title_small {
    text-transform: uppercase;
    white-space: nowrap;
    font-size: calc(var(--root-title-fontsize) * 0.6);
}

/* #endregion Section 'Universitas' */

/* #region Section 'Cara Pakai' */

.kenapa_sipk {
    --inner-padding: 3rem;
    --subtitle-fontsize: 1.7rem;
    --root-action-fontsize: 1.1rem;
    --root-section-height: calc(100vh - (2 * var(--root-base-padding)));
    height: var(--root-section-height);
    padding: var(--inner-padding);
    overflow: hidden;
    display: grid;
    grid-template-rows: max-content 1fr;
}

.kenapa_sipk .title {
    text-align: center;
    margin-bottom: 3rem;
}

.kenapa_sipk .content {
    position: relative;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
}

.kenapa_sipk .content .overlay {
    position: absolute;
    top: 0%;
    left: 0%;
    width: 100%;
    height: 100%;
    z-index: var(--z-tooltip);
}

.kenapa_sipk .content.active_1 {
    grid-template-columns: 70% 1fr 1fr;
}
/* ... */

